fix text alignment

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,4 +24,5 @@ a {
   padding: 2rem 1rem 1rem;
   font-weight: 700;
   color: var(--color-text);
+  text-align: center;
 }
